--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "description": "Gulp project builder",
   "author": "qube.kz",
   "dependencies": {
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "owl.carousel": "^2.2.1"
   }
 }
