--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,11 @@
   "author": "qube.kz",
   "dependencies": {
     "jquery": "^3.2.1",
-    "owl.carousel": "^2.2.1"
+    "owl.carousel": "^2.2.1",
+    "animate.css": "^3.5.2",
+    "wow": "^1.1.2"
+  },
+  "devDependencies": {
+    "wow": "^1.1.2"
   }
 }
